# digit-nn-rs

./: .gitignore  Cargo.toml  README.md  fmt.py  model
src/: main.rs  mnist.rs  network.rs
