[package]
name = "digit-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.35"
image = "0.24.8"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
npy = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
